--- a/scss/imports/core/_elements.scss
+++ b/scss/imports/core/_elements.scss
@@ -2,7 +2,7 @@
     box-shadow: 5px 5px 15px #B964E245;
     border: 1px solid #89AAE3;  
     border-radius: 5px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     margin-left: 10px;
@@ -33,5 +33,39 @@
                 @include text(14px,HB, $lh-text, $white-cl, none);
             }
         }
+        @include mobile{
+            .btn__wrap{
+                padding: 5px 5px;
+                a{
+                    white-space: nowrap; 
+                    @include text(10px,HB, $lh-text, $white-cl, none);
+                }
+            }
+        }
+        @include tablet{
+            .btn__wrap{
+                padding: 5px 5px;
+                a{
+                    white-space: nowrap; 
+                    @include text(10px,HB, $lh-text, $white-cl, none);
+                }
+            }
+        }
+    }
+}
+.text{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    p{
+        display: inline-block;
+        @include text(14px,HB, $lh-text, #89AAE3, none);
+        padding: 10px 20px;
+        background-color: #EFF5FF;
+        border-radius: 25px;
+    }
+    span{
+        color: $black-cl;
     }
 }
