--- a/scss/imports/pages/_home.scss
+++ b/scss/imports/pages/_home.scss
@@ -141,14 +141,36 @@
         }
     }
     .slide{
+        // background: #F9F9F9;
         --height:250px;
         margin-top: 20px;
         height: var(--height);
+
         .container{
+            position: relative;
             height: 100%;
+            .dot{
+                position: absolute;
+                top: 10px;
+                left: 45px;
+                display: inline-flex;
+                z-index: 5;
+                span{
+                    margin-right: 5px;
+                    width: 10px;
+                    height: 10px;
+                    background: #FFFFFF 0% 0% no-repeat padding-box;
+                    box-shadow: 5px 5px 10px #00000038;
+                    border: 1px solid #A7A7A7;
+                    border-radius: 5px;
+                    opacity: 1;
+                    &.active{
+                        width: 50px;
+                    }
+                }
+            }
             .slide__wrap{
                 overflow: hidden;
-                position: relative;
                 height: 100%;
                 border-radius:5px;
                 z-index: 2;
@@ -170,33 +192,15 @@
                             @include overtext(2);
                         }
                     }
-                    img{
-                        min-width: 100%;
-                        min-height: 100%;
-                        object-fit: cover;
-                        @include mid();
-                    }
+                    // img{
+                    //     min-width: 100%;
+                    //     min-height: 100%;
+                    //     object-fit: cover;
+                    //     @include mid();
+                    // }
                 }
             }
-            .dots{
-                position: absolute;
-                top: 10px;
-                left: 10px;
-                display: inline-flex;
-                span{
-                    margin-right: 5px;
-                    width: 10px;
-                    height: 10px;
-                    background: #FFFFFF 0% 0% no-repeat padding-box;
-                    box-shadow: 5px 5px 10px #00000038;
-                    border: 1px solid #A7A7A7;
-                    border-radius: 5px;
-                    opacity: 1;
-                    &.active{
-                        width: 50px;
-                    }
-                }
-            }
+            
         }
         @include tablet{
             .container{
@@ -224,8 +228,9 @@
         }
     }
     .partner{
-        margin-top: 45px;
-        margin-bottom: 30px;
+        // background: #F9F9F9;
+        padding-top: 45px;
+        padding-bottom: 30px;
         .container{
             overflow: hidden;
             .partner__wrap{
@@ -252,17 +257,11 @@
                         padding: 10px 10px;
                     }
                 }
-                .text{
-                    p{
-                        @include text(12px,HB, $lh-text, #89AAE3, none);
-                        text-align: center;
-                    }
-                }
             }
         }
     }
     .products{
-        // overflow: hidden;
+        background: #F9F9F9;
         height: 500px;
         background: url(../img/background_blue.png) no-repeat;
         background-size: 100%;
@@ -362,10 +361,135 @@
         }
     }
     .solution{
-        margin:50px 0;
+        background: #F9F9F9;
+        padding:50px 0;
         .text{
             p{
                 font-size:26px;
+            }
+        }
+        .container{
+            margin-top: 30px;
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+            grid-template-rows: repeat(2,1fr);
+            column-gap: 30px;
+            row-gap: 30px;
+            .solution__content{
+                &-top{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                }
+                &-text{
+                    h2{
+                        margin: 10px 0;
+                        @include text(20px,HB,$lh-text,$black-cl,none);
+                    }
+                }
+            }
+        }
+        @include mobile{
+            .container{
+                grid-template-columns: 1fr;
+            }
+        }
+    }
+    .news{
+        background: #F9F9F9;
+        padding-bottom: 80px;
+        .container{
+            >h2{
+                @include text(30px,RB,$lh-text,$black-cl,none);
+                padding-bottom: 30px;
+            }
+            .new__content{
+                display: flex;
+                justify-content: space-between;
+                &-left{
+                    display: flex;
+                    justify-content: space-between;
+                    background:$white-cl;
+                    .content-text{
+                        padding:0 40px;
+                        h2{
+                            @include text(30px,RB,$lh-text,$black-cl,none);
+                            padding: 20px 0;
+                        }
+                        >a > p{
+                            width: 500px;
+                            @include overtext(3)
+                        }
+                        >a{
+                            color: $black-cl;
+                        }
+                    }
+                }
+                &-right{
+                    width: 400px;
+                    display: flex;
+                    flex-direction: column;
+                    .item{
+                        display: flex;
+                        flex-direction: column;
+                        background-color: $white-cl;
+                        padding: 30px 20px;
+                        margin-bottom: 10px;
+                        >p{
+                            color: #89AAE3;
+                        }
+                        >h2{
+                            @include text(14px,RB,$lh-text,$black-cl,none);
+                            @include overtext(2)
+                        }
+                    }
+                }
+            }
+        }
+        @include desktop{
+            .container{
+                .new__content{
+                    flex-direction: column;
+                    &-right{
+                        padding-top: 20px;
+                        width: 100%;
+                    }
+                }
+            }
+        }
+        @include tablet{
+            .container{
+                .new__content{
+                    &-left{
+                        .content-text{
+                            >a > p{
+                                width: 300px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        @include mobile{
+            .container{
+                .new__content{
+                    &-left{
+                        flex-direction: column;
+                        justify-content: center;
+                        .content-img{
+                            display: flex;
+                            justify-content: center;
+                        }
+                        .content-text{
+                            h2{
+                                font-size: 14px;
+                            }
+                            >a > p{
+                                width: 200px;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
