--- a/scss/imports/core/_header.scss
+++ b/scss/imports/core/_header.scss
@@ -38,6 +38,7 @@ header{
                         }
                         i{
                             padding-left: 10px;
+                            display: flex;
                         }
                         &:last-child{
                             margin-right: 0px;
