--- a/scss/imports/core/_elements.scss
+++ b/scss/imports/core/_elements.scss
@@ -52,6 +52,26 @@
             }
         }
     }
+    &.btn_sologan{
+        background:$white-cl;
+        padding:10px;
+        .btn__wrap{
+            height: 100%;
+            width: 100%;
+        }
+        a{
+            @include text(14px,HM,$lh-text,$black-cl,none);
+            width:100%;
+            height: 100%;
+            white-space: nowrap; 
+        }
+        &:hover{
+            background:#89AAE3;
+            a{
+                color: $white-cl;
+            }
+        }
+    }
     &.viewmore{
         background-color: #EFF5FF;
         border-radius: 20px;
